--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,11 +10,8 @@ services:
       - DATABASE_NAME=${DATABASE_NAME}
       - DATABASE_HOST=${DATABASE_HOST}
       - DATABASE_PORT=${DATABASE_PORT}
-      - REMOTE_SERVICE=${REMOTE_SERVICE}
-      - REMOTE_FOLDER=${REMOTE_FOLDER}
+      - TELEGRAM_TOKEN=${TELEGRAM_TOKEN}
+      - CHAT_ID=${CHAT_ID}
       - CRON_EXPRESION=${CRON_EXPRESION}
-      - REMOTE_KEEP_TIME=${REMOTE_KEEP_TIME:-5d}
-    volumes:
-      - ./:/root/.config/rclone
     restart: unless-stopped
 
